# SODS_BE

./: .dockerignore  .gitignore  Dockerfile  README.md  Standard.config  docker-compose.yml  license.json  pyproject.toml
alembic/: README  env.py  script.py.mako
app/: main.py
app/analysis/: __init__.py  (+14 more)
tests/: test_analysis_adsb_rules.py  test_analysis_context_builder.py  test_analysis_gp_rules.py  test_analysis_gp_run_area_geometry.py  test_analysis_gp_run_area_parameters.py  test_analysis_hf_rules.py  test_analysis_loc_rules.py  test_analysis_loc_run_area_geometry.py  test_analysis_loc_run_area_parameters.py  test_analysis_local_coordinate.py  test_analysis_mb_rules.py  test_analysis_ndb_rules.py  test_analysis_obstacle_categories.py  test_analysis_protection_zone_builder.py  test_analysis_protection_zone_style.py  test_analysis_radar_rules.py  test_analysis_rule_result.py  test_analysis_runway_rules.py  test_analysis_spatial_facts.py  test_analysis_standards.py  test_analysis_station_dispatcher.py  test_analysis_surface_detection_radar_rules.py  test_analysis_vhf_rules.py  test_analysis_vor_rules.py  test_analysis_weather_radar_rules.py  test_analysis_wind_radar_rules.py  test_app_import.py  test_config.py  test_data_management_api.py  test_data_management_import_api.py  test_db.py  test_license_core.py  test_license_gen.py  test_license_middleware.py  test_migrations.py  test_models.py  test_point_obstacle_excel_parser.py  test_point_obstacle_import_api.py  test_polygon_obstacle_excel_parser.py  test_polygon_obstacle_export_api.py  (+6 more)
tools/: license_gen.py
(+192 files in other folders)
